[Update] setup authen

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "*",
+    "Audience": "*",
+    "Key": "3668172D26365CE9B8274F77D97CC"
+  }
 }
